# minipb

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  classminipb_1_1array__input__stream-members.html  classminipb_1_1array__input__stream.html  classminipb_1_1array__input__stream.js  classminipb_1_1array__input__stream__inherit__graph.map  classminipb_1_1array__input__stream__inherit__graph.md5  classminipb_1_1array__output__stream-members.html  classminipb_1_1array__output__stream.html  classminipb_1_1array__output__stream.js  classminipb_1_1array__output__stream__coll__graph.map  classminipb_1_1array__output__stream__inherit__graph.md5  classminipb_1_1container__input__stream-members.html  classminipb_1_1container__input__stream.html  classminipb_1_1container__input__stream.js  classminipb_1_1container__input__stream__coll__graph.md5  classminipb_1_1container__input__stream__inherit__graph.map  classminipb_1_1container__output__stream-members.html  classminipb_1_1container__output__stream.html  classminipb_1_1container__output__stream.js  classminipb_1_1container__output__stream__coll__graph.map  classminipb_1_1container__output__stream__inherit__graph.md5  classminipb_1_1decoder-members.html  classminipb_1_1decoder.html  classminipb_1_1decoder.js  classminipb_1_1encoder-members.html  classminipb_1_1encoder.html  classminipb_1_1encoder.js  classminipb_1_1input__stream-members.html  classminipb_1_1input__stream.html  classminipb_1_1input__stream.js  classminipb_1_1input__stream__inherit__graph.map  classminipb_1_1input__stream__inherit__graph.md5  classminipb_1_1msg__builder-members.html  (+43 more)
.github/workflows/: documentation.yml
include/minipb/: minipb.h
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+3 more)
src/: minipb_generator.cpp  sample.proto
test/: test.cpp
